[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
rust_decimal = "1.23"
thiserror = "1.0.30"
clap = { version = "3.1.8", features = ["derive"] }
itertools = "0.10.3"

[dev-dependencies]
paste = "1.0.7"
rust_decimal_macros = "1.23"
